--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -54,12 +54,15 @@ jobs:
           version: "~> v2"
           args: release --clean --snapshot
 
+      - name: Set SHA7
+        run: echo "GITHUB_SHA7=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
       - name: Post-upload artifacts
         run: .goreleaser/post_upload_GaRuS.sh
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_REF_NAME: ${{ github.ref_name }}
-          GITHUB_SHA7: ${{ github.sha.substr(0, 7) }}
+          GITHUB_SHA7: ${{ env.GITHUB_SHA7 }}
           COMPILER: "GOR"
           BUILD_TEST_UPLOAD_TOKEN: ${{ secrets.BUILD_TEST_UPLOAD_TOKEN }}
 
